# skill-browse

./: .gitignore  CLAUDE.md  README.md  SKILL.md  apm.yml
.apm/skills/browse/: CLAUDE.md  SKILL.md  pyproject.toml
.apm/skills/browse/src/browse/: authwall.py  cli.py
.apm/skills/browse/tests/: test_authwall.py  test_config.py
.github/workflows/: release.yml
src/browse/: config.py  runner.py
tests/fixtures/: picker_snapshot.txt
